package com.tunepruner.fourwards.gui.newgui.cell;

public class Cell {
    CellDesign design;
    CellAnimationBehavior animation;
    CellMouseBehavior mouse;
    CellPlacement placement;

    public void displayCell() {
    }

}
