package com.tunepruner.fourwards.gui.newgui.cell;

import com.tunepruner.fourwards.data.general.Subscriber;

public class CellAnimationBehavior implements Subscriber {
    CellPlacement placement;
    public void animateIn() {
    }

    public void animateOut() {
    }

    public void animateTo() {
    }

    public void handleDrag() {
    }

    public void update() {
    }
}