@startuml
class Cells{
CellList
}
class Cell{
CellMouseBehavior
CellPlacement
CellDesign
CellAnimationBehavior
}
class CellAnimationBehavior{
CellPlacement
}
class CellMouseBehavior{
CellList
CellDesign
CellPlacement
}
class CellPlacement{
CellList
}
class CellDesign
class CellList<Cell>

Cells *- CellList
Cell *-- CellDesign
Cell *- CellAnimationBehavior
Cell *-- CellPlacement
Cell *-- CellMouseBehavior

@enduml